--- a/edurov_server/web/static/style.css
+++ b/edurov_server/web/static/style.css
@@ -55,3 +55,14 @@ body {
   grid-template-columns: 200px auto 200px;
   height: 100%;
 }
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
